Fixed some accessibility and contrast issues

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -80,7 +80,7 @@
 }
 
 strong {
-  color: var(--pink9);
+  color: var(--pink11);
 }
 
 body {
